--- a/package.json
+++ b/package.json
@@ -7,6 +7,13 @@
   },
   "dependencies": {
     "express": "3.4.8",
-    "jade": "*"
+    "jade": "*",
+    "lodash": "~2.4.1",
+    "musicmetadata": "~0.3.2",
+    "jquery-file-upload-middleware": "~0.1.1",
+    "request": "~2.33.0",
+    "node-sass": "~0.8.1",
+    "sequelize": "~1.7.0-rc5",
+    "socket.io": "~0.9.16"
   }
 }
