--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "request": "~2.33.0",
     "node-sass": "~0.8.1",
     "sequelize": "~1.7.0-rc5",
-    "socket.io": "~0.9.16"
+    "socket.io": "~0.9.16",
+    "mysql": "~2.0.1",
+    "pg": "~2.11.1"
   }
 }
